update controllers tests